# website

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  LICENSE  Makefile  README.md  docker-compose.yml  justfile  mkdocs.insiders.yml  mkdocs.txt  mkdocs.yml  nginx.conf  pyproject.toml  sitemap.xml
.cache/plugins/optimize/: manifest.json
.github/workflows/: deploy_website.yml  publish_docker.yml  test_deploy.yml  test_website.yml
Docker/: app.dockerfile  nginx.dockerfile  test.dockerfile
custom_theme/: 404.html
docs/: board.en.md  board.md  brand_identity.en.md  brand_identity.md  code_conduct.en.md  code_conduct.md  codice_condotta.md  community_history.en.md  community_history.md  index.en.md  index.md  tags.en.md  tags.md
docs/blog/: .authors.yml  .meta.yml  index.md
docs/blog/posts/: new_brand_identity.en.md  new_brand_identity.md  website.md
docs/chess_ai_thon/: index.en.md  index.md
docs/functions/: workflows.md
docs/home/: codice_condotta.md  index.md
docs/learning/: index.en.md  index.md
docs/learning/articles/: code_style.en.md  code_style.md  document_code.en.md  document_code.md  documentare_codice.md  gestire_versioni_python.md  manage_dependencies.en.md  manage_dependencies.md  manage_python_version.en.md  manage_python_version.md  project_structure.en.md  project_structure.md  repl.en.md  repl.md  vs_code.en.md  vs_code.md
docs/learning/better_code/: index.en.md  index.md
docs/learning/better_code/bandit/: index.md
docs/learning/better_code/black/: index.md
docs/learning/better_code/flake8/: index.md
docs/learning/better_code/mypy/: index.md
docs/learning/better_code/ruff/: index.md
docs/learning/code_style/: index.en.md  index.md
docs/learning/create_package/: index.en.md  index.md
docs/learning/data_analysis/: index.md
docs/learning/document_code/: index.en.md  index.md
docs/learning/linux_base/: index.md
docs/learning/manage_dependencies/: index.en.md  index.md
docs/learning/manage_dependencies/anaconda/: index.md
docs/learning/manage_dependencies/pipx/: index.en.md  index.md
docs/learning/manage_dependencies/poetry/: advance.en.md  advance.md  index.en.md  index.md
docs/learning/manage_dependencies/pyenv/: index.en.md  index.md
docs/learning/material/: index.md
docs/learning/mkdocs_tutorial/: deploy.en.md  deploy.md  document_code.en.md  document_code.md  extensions.en.md  extensions.md  extra_functions.en.md  extra_functions.md  github_pages.en.md  github_pages.md  index.en.md  index.md  mkdocs_vs_sphinx.en.md  mkdocs_vs_sphinx.md  setup.en.md  setup.md
docs/learning/pre-commit/: index.md
docs/learning/project_structure/: index.en.md  index.md
docs/learning/python_advanced/: index.en.md  index.md
docs/learning/python_version/: index.en.md  index.md
docs/learning/roadmap/: index.md
docs/learning/settings_management/: index.md
docs/learning/tech_independence/: index.md
docs/learning/testing_python/: index.en.md  index.md
docs/learning/vscode/: index.en.md  index.md
docs/learning/wiki/: create_package.md
docs/meetup/: airflow_pyspark.md  antlr.md  data_versioning.md  index.en.md  index.md  intro_k8s.md  mlops_aws.md  modern_python.md  next_meetup.en.md  next_meetup.md  nvidia_triton.md  orso_game.md  python_base.md  rpa.md  squirrel_telegram_bot.md  technical_dept.md  tensorflow_serving.md  web_scraping.md
docs/meetup/archive/: agile.en.md  agile.md  airflow_pyspark.en.md  airflow_pyspark.md  data_testing.en.md  data_testing.md  data_versioning.en.md  data_versioning.md  ds_pharma.en.md  ds_pharma.md  git.en.md  git.md  github_actions.en.md  github_actions.md  gpt_detection.en.md  gpt_detection.md  graphql.en.md  graphql.md  handle_except.en.md  handle_except.md  intro_apache_beam.en.md  intro_apache_beam.md  intro_databricks.en.md  intro_databricks.md  intro_docker.md  nerpii.en.md  nerpii.md  nlp_topic_modeling.en.md  nlp_topic_modeling.md  nvidia_triton.en.md  nvidia_triton.md  rpa.en.md  rpa.md  sentiment_analisys.md  sentiment_analysis.en.md  sentiment_analysis.md  technical_dept.en.md  technical_dept.md  telegram_bot.en.md  telegram_bot.md  (+6 more)
docs/meetup/python_base/: index.md  python_base_1.md
docs/progetto_scuole/: index.en.md  index.md
docs/progetto_scuole/2025-26/: index.en.md  index.md
docs/speakers/: index.en.md  index.md  speaker_guide.en.md  speaker_guide.md
docs/style/: custom.css  extra.css  hide_lang_links.css  neoteroi-mkdocs.css
docs/supporters/: index.en.md  index.md
home/: index.html
home/codice_condotta/: index.html
learning/: index.html
learning/articles/code_style/: index.html
learning/articles/documentare_codice/: index.html
learning/articles/gestire_dipendenze/: index.html
learning/articles/gestire_versioni_python/: index.html
learning/articles/repl/: index.html
learning/articles/struttura_progetto/: index.html
learning/articles/vs_code/: index.html
learning/wiki/creare_un_package/: index.html
meetup/: index.html
meetup/airflow_pyspark/: index.html
meetup/antlr/: index.html
meetup/data_versioning/: index.html
meetup/debito_tecnico/: index.html
meetup/ds_pharma/: index.html
meetup/gioco_orso/: index.html
meetup/github_actions/: index.html
meetup/gpt_detection_sys/: index.html
meetup/graphql/: index.html
meetup/intro_docker/: index.html
meetup/intro_kb8/: index.html
meetup/mlops_aws/: index.html
meetup/modern_python_dev/: index.html
meetup/nlp_topic_modeling/: index.html
meetup/nvidia_triton/: index.html
meetup/python_base/: index.html
meetup/rpa/: index.html
meetup/squirrel_telegram_bot/: index.html
meetup/telegram_bot/: index.html
meetup/tensorflow_serving/: index.html
meetup/testare_dati/: index.html
meetup/web_scraping/: index.html
meetup/xgboost/: index.html
overrides/: 404.en.html  404.html  home.en.html  home.html
overrides/partial/: comments.html
overrides/partials/: comments.html
search/: search_index.json
supporters/: index.html
templates/: blog_post.md  meetup.md
theme/: 404.html  base.html  main.html
theme/hooks/: translations.html  translations.py
(+309 files in other folders)
